--- a/profile/templates/profile/trayectory.html
+++ b/profile/templates/profile/trayectory.html
@@ -1,4 +1,4 @@
-{% extends 'admin/base.html' %}
+{% extends 'admin/base_site.html' %}
 {% load static %}
 
 {% block title %}Perfil a través de trayectoria{% endblock %}
