--- a/profile/templates/profile/trayectory.html
+++ b/profile/templates/profile/trayectory.html
@@ -59,6 +59,14 @@
           </div>
           -->
           <div class="col-md-2 col-sm-12 col-xs-12 form-group">
+            <label class="control-label" for="dateFromFilter">Día:</label>
+            <select type="text" id="dayFilter" placeholder="Día" class="form-control">
+              {% for day in days %}
+              <option>{{ day }}</option>
+              {% endfor %}
+            </select>
+          </div>
+          <div class="col-md-2 col-sm-12 col-xs-12 form-group">
             <label class="control-label" for="routeFilter">Servicio-sentido:</label>
             <!-- <input type="text" id="routeFilter" placeholder="Servicio sentido" class="form-control">-->
             <select class="form-control" id='routeFilter'>
@@ -214,9 +222,9 @@ $(document).ready(function(){
         return FILE_NAME + _trips[0]['route'];
       }
       return '';
-    }
+    };
     this.trips = function(trips){
-      if(trips == undefined){
+      if(trips === undefined){
         return _trips;
       }
       _visibleTrips=0;
@@ -239,7 +247,7 @@ $(document).ready(function(){
       return _visibleTrips;
     };
     this.yAxisData = function(data){
-      if(data == undefined){
+      if(data === undefined){
         return _yAxisData;
       }
       _yAxisData = data;
@@ -280,7 +288,7 @@ $(document).ready(function(){
           continue;
         }
         let attrValue = trip[attrName];
-        attrValue = (formatFunc==undefined?attrValue:formatFunc(attrValue));
+        attrValue = (formatFunc===undefined?attrValue:formatFunc(attrValue));
         if(dict[attrValue]){
           dict[attrValue]++;
         }else{
@@ -350,7 +358,7 @@ $(document).ready(function(){
         { title: 'Período inicio expedición', data: 'authTimePeriod', searchable: true},
         { title: 'Hora de inicio', data: 'timeTripInit', searchable: true},
         { title: 'Hora de fin', data: 'timeTripEnd', searchable: true},
-        { title: 'Tipo de día', data: 'dayType', searchable: true},
+        { title: 'Tipo de día', data: 'dayType', searchable: true}
       ],
       order: [[4, 'asc']],
       createdRow: function ( row, data, index ) {
@@ -362,7 +370,7 @@ $(document).ready(function(){
         mainCheckbox.iCheck({
           labelHover: false,
           cursor: true,
-          checkboxClass: 'icheckbox_flat-green',
+          checkboxClass: 'icheckbox_flat-green'
         });
         mainCheckbox.on('ifToggled', function(event){
           // Get all rows with search applied
@@ -402,18 +410,18 @@ $(document).ready(function(){
     });
 
     this.dataManager = function(dataManager){
-      if(dataManager == undefined){
+      if(dataManager === undefined){
         return _dataManager;
       }
       _dataManager = dataManager;
       this.updateCharts();
       this.updateDatatable();
-    }
+    };
 
     let _updateDatatable = function(){                                     
       let dataset = _dataManager.getDatatableData();                       
-      let rows = dataset['rows']                                           
-      let maxHeight = dataset['maxHeight']                                 
+      let rows = dataset['rows'];
+      let maxHeight = dataset['maxHeight'];
                                                                            
       _datatable.off('draw');                                              
       _datatable.on('draw', function(oSettings) {                          
@@ -421,7 +429,7 @@ $(document).ready(function(){
           type: 'bar',                                                     
           barColor: '#169f85',                                             
           negBarColor: 'red',                                              
-          chartRangeMax: maxHeight,                                        
+          chartRangeMax: maxHeight
         });                                                                
                                                                            
         $('tbody input.flat').iCheck('destroy');                           
@@ -462,7 +470,7 @@ $(document).ready(function(){
           type: 'bar',                                                     
           barColor: '#169f85',                                             
           negBarColor: 'red',                                              
-          chartRangeMax: maxHeight,                                        
+          chartRangeMax: maxHeight
         });                                                                
       })                                                                   
     };
@@ -485,7 +493,7 @@ $(document).ready(function(){
           name: trip.licensePlate,
           type: 'line', data: trip.data, 
           showSymbol: true, symbol: 'pin', symbolSize: 6,
-          lineStyle: { normal: { width: 1,}},
+          lineStyle: { normal: { width: 1}}
         };
         let visualMap = {
           show: false,
@@ -507,15 +515,15 @@ $(document).ready(function(){
             lte: (new Date(trip.data[i][0])).getTime(), 
             color: color
           };
-          if(previousPiece==null){
+          if(previousPiece === null){
             previousPiece = piece;
-          }else if(previousPiece.color == piece.color){
+          }else if(previousPiece.color === piece.color){
             previousPiece.lte = piece.lte;
           }else{
             visualMap.pieces.push(previousPiece);
             previousPiece = piece;
           }
-          if(i+1==trip.data.length){
+          if(i+1 === trip.data.length){
             visualMap.pieces.push(previousPiece);
           }
         }
@@ -539,13 +547,13 @@ $(document).ready(function(){
       //generates markLine
       let markLines = [];
       let yMax = 0;
-      _dataManager.yAxisData().forEach(function(item, index){
+      _dataManager.yAxisData().forEach(function(item){
         if(item.value > yMax){
           yMax = item.value;
         }
         let markLine = {
           yAxis: item.value, 
-          name: item.name,
+          name: item.name
         };
         markLines.push(markLine);
       });
@@ -559,14 +567,14 @@ $(document).ready(function(){
             textStyle: {
               fontSize: 9, color: '#000'
             },
-            position: 'left',
+            position: 'left'
           }
         },
         lineStyle: {
           normal: {
             type: 'solid',
             opacity: 0.2,
-            color: '#000',
+            color: '#000'
           }
         } 
       }; 
@@ -589,12 +597,12 @@ $(document).ready(function(){
           //show: true, type: 'inside', yAxisIndex: 0, start: 0, end: 100
         }],
         xAxis:{
-          type: 'time', name: 'Hora', boundaryGap: false, splitNumber: 15, splitLine:{ show: false}, 
+          type: 'time', name: 'Hora', boundaryGap: false, splitNumber: 15, splitLine:{ show: false}
         },
         yAxis: {
           type: 'value', name: 'Distancia en Ruta', splitLine:{ show: false}, splitArea: {show: false},
           axisLabel: {show: false}, axisTick: {show: false},
-          max: yMax,
+          max: yMax
         },
         tooltip: { 
           show:true,
@@ -602,9 +610,9 @@ $(document).ready(function(){
           formatter: function(params){
             console.log(params);
             let row = [];
-            if(params.componentType=='series'){
+            if(params.componentType === "series"){
               row.push(params.marker);
-              if(params.componentSubType=='line'){
+              if(params.componentSubType === "line"){
                 let time = params.data[0];
                 let loadProfile = params.data[2];
                 let getOut = params.data[4];
@@ -614,7 +622,7 @@ $(document).ready(function(){
                 row.push('Carga: ' + loadProfile);
                 row.push('Bajadas: ' + getOut);
                 row.push('Subidas: ' + getIn);
-              }else if(params.componentSubType=='scatter'){
+              }else if(params.componentSubType === "scatter"){
                 let getIn = params.data[5];
                 row.push('Subidas: ' + getIn);
               }
@@ -625,7 +633,7 @@ $(document).ready(function(){
         grid: {
           left: '200px',
           bottom: '80px',
-          containLabel: true,
+          containLabel: true
         },
         toolbox: {
           show : true,
@@ -648,9 +656,9 @@ $(document).ready(function(){
                 zoom: 'Seleccionar área',
                 back: 'Restablecer vista'
               }
-            },
+            }
           }
-        },
+        }
       };
       
       _barChart.clear();
@@ -792,12 +800,14 @@ $(document).ready(function(){
     $('#expeditionIdFilter').tagsInput({defaultText: '...', minChars:1});
     $('#licensePlateFilter').addTag('BJFS-17');
 
+    $('#dayFilter').select2({placeholder: 'Todos'});
     $('#dayTypeFilter').select2({placeholder: 'Todos'});
     $('#periodFilter').select2({placeholder: 'Todos'});
     $('#routeFilter').select2({placeholder: 'Servicio'});//, allowClear: true});
  
     let app = new ExpeditionApp();
     $('#btnUpdateChart').click(function(){
+      var day = $('#dayFilter').val();
       //var from = $('#dateFromFilter').val();
       //var to = $('#dateToFilter').val();
       var route = $('#routeFilter').val();
@@ -817,6 +827,7 @@ $(document).ready(function(){
       //console.log(expeditionId);
 
       let params = {
+        day: day
         //from: from,
         //to: to,
       };
@@ -841,7 +852,7 @@ $(document).ready(function(){
       app.showLoadingAnimationCharts();
       let loadingIcon = " <i class='fa fa-cog fa-spin fa-2x fa-fw'>";
       let previousMessage = $(this).html();
-      let button = $(this).append(loadingIcon) 
+      let button = $(this).append(loadingIcon);
       $.getJSON('getExpeditionData', params, function(data){
         processData(data, app);
       })
