--- a/velocity/templates/velocity/variation.html
+++ b/velocity/templates/velocity/variation.html
@@ -108,7 +108,7 @@
 <script src="{% static gentelella_static|add:"pnotify/dist/pnotify.nonblock.js" %}"></script>
 <script src="{% static gentelella_static|add:"select2/dist/js/select2.min.js" %}"></script>
 {% endwith %}
-<script src="{% static "own/js/echartsTheme.js" %}"></script>
+<script src="{% static "js/echartsTheme.js" %}"></script>
 <script>
 $(document).ready(function(){
     // echarts stuffs
