updated path to html base file

--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -52,6 +52,13 @@
                   <li><a href=" {% url "profile:trayectory" %} "> Trayectoria</a></li>
                 </ul>
               </li>
+              <li><a><i class="fa fa-tachometer"></i> Velocidades <span class="fa fa-chevron-down"></span></a>
+                <ul class="nav child_menu">
+                  <li><a href=" {% url "matrix" %} "> matriz por servicio</a></li>
+                  <li><a href=" {% url "ranking" %} "> ranking de velocidades</a></li>
+                  <li><a href=" {% url "variation" %} "> variación de velocidades</a></li>
+                </ul>
+              </li>
             </ul>
           </div>
         </div>
