--- a/velocity/templates/velocity/ranking.html
+++ b/velocity/templates/velocity/ranking.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'admin/base_site.html' %}
 {% load static %}
 
 {% block title %}Ranking de Velocidades{% endblock %}
