added shape app to analize shape and stops of routes

--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -59,6 +59,11 @@
                   <li><a href=" {% url "variation" %} "> variación de velocidades</a></li>
                 </ul>
               </li>
+              <li><a><i class="fa fa-tachometer"></i> Rutas <span class="fa fa-chevron-down"></span></a>
+                <ul class="nav child_menu">
+                  <li><a href=" {% url "shape:map" %} "> mapa</a></li>
+                </ul>
+              </li>
             </ul>
           </div>
         </div>
